# fleet

./: Cargo.toml  deploy.sh
.github/workflows/: fleet-agent-edge-release.yml
fleet_agent/: Cargo.toml
fleet_agent/src/: main.rs
ops/: update-fleet-agent-from-release.sh
ops/systemd/: fleet-updater.env.example  fleet-updater.service  fleet-updater.timer
